--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden Services</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="./css/normalize.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
   </head>
-  <body class="bodu">
+  <body class="body">
     <header class="header">
-        <a class="logo" href="#"<p class="golden-logo"> Golden</p></a>
+        <a class="logo" href="#" <p class="golden-logo"> Golden</p></a>
         <nav class="header-nav">
         <ul class="header-list">
             <li class="header-item"><a class="header-link" href="#">Home</a></li>
@@ -56,7 +58,7 @@
                     <input type="email" placeholder="YOUR E-MAIL*" class="contact-input">
                 </label class="contact-label">
                 <label>
-                    <input type="text" placeholder="SUBJECT*" class="contact-inpur">
+                    <input type="text" placeholder="SUBJECT*" class="contact-input">
                 </label class="contact-label">
                 <label>
                     <textarea placeholder="YOUR MESSAGE*" class="contact-area"></textarea>
