--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body class="body">
     <header class="header">
+        <div class="container">
         <a class="logo" href="#" <p class="golden-logo"> Golden</p></a>
         <nav class="header-nav">
         <ul class="header-list">
@@ -23,10 +24,11 @@
             <li class="header-item"><a class="header-link" href="#">Contact</a></li>
         </ul>
         </nav>
-    </header>
+        </div>
     </header>
     <main class="main">
         <section class="services">
+            <div class="container">
             <h2 class="services-title" >Services</h2>
             <ul class="services-list">
                 <li class="services-item"> 
@@ -47,8 +49,10 @@
                 </li>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="contact">
+            <div class="container">
             <h2 class="contact-title">Contact Us</h2>
             <form class="contact-form">
                 <label class="contact-label">
@@ -65,8 +69,11 @@
                 </label>
                 <button type="submit" class="contact-button">SEND MESSAGE</button>
             </form>
+            </div>
         </section>
     </main>
+    <div class="container">
     <footer class="footer"></footer>
+    </div>
   </body>
 </html>
